--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,5 +43,7 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "docwriter.style": "Google",
+    "docwriter.progress.trackFunctions": false
 }
